--- a/core/directives/hxpBoard/hxpBoard.template.html
+++ b/core/directives/hxpBoard/hxpBoard.template.html
@@ -1,47 +1,27 @@
-<h3 ng-if="game.victory == ' ' && game.boardMoves.length > 0">
-  {{i18n.GAME + ' ' + game.number}},
-  {{i18n.MOVE + ' ' + (game.playerMoves.length + 1)}}:
-  {{game.players[game.currentPlayer].name}}
-</h3>
-
-<h3 ng-if="game.victory != ' ' && game.victory != 'R'">
-  {{i18n.GAME + ' ' + game.number}},
-  {{game.players[game.currentPlayer].name + ' ' + i18n.VICTORY}}
-</h3>
-
-<h3 ng-if="game.victory == 'R'">
-  {{i18n.GAME + ' ' + game.number}},
-  {{game.players[game.currentPlayer].name + ' ' + i18n.RESIGNS}}
-</h3>
-
-<h3 ng-if="game.victory == ' ' && game.boardMoves.length == 0">
-  {{i18n.GAME + ' ' + game.number}},
-  {{game.players[game.currentPlayer].name}} {{i18n.NO_MOVE_FOR}}
-</h3>
-
 <div id="board-container">
   <svg viewbox="0 0 9 9" width="9em" height="9em">
 
-  <polyline ng-repeat="a in game.arrows" points="{{a.pointString}}" style="{{a.style}}" />
+  <polyline ng-repeat="a in arrows" points="{{a.pointString}}" style="{{a.style}}" />
 
   </svg>
+
   <table id="board">
 
     <tr> <!--(Row 3)-->
       <td class="dark tile top-left">
-        <div class="white pawn" ng-if="game.boardState.substr(6, 1) === 'W'">&#9823;</div>
-        <div class="black pawn" ng-if="game.boardState.substr(6, 1) === 'B'">&#9823;</div>
+        <div class="white pawn" ng-if="boardState.substr(6, 1) === 'W'">&#9823;</div>
+        <div class="black pawn" ng-if="boardState.substr(6, 1) === 'B'">&#9823;</div>
         <div class="cell-label">a3</div>
 
       </td> <!-- cell a3 -->
       <td class="tile top-center">
-        <div class="white pawn" ng-if="game.boardState.substr(7, 1) === 'W'">&#9823;</div>
-        <div class="black pawn" ng-if="game.boardState.substr(7, 1) === 'B'">&#9823;</div>
+        <div class="white pawn" ng-if="boardState.substr(7, 1) === 'W'">&#9823;</div>
+        <div class="black pawn" ng-if="boardState.substr(7, 1) === 'B'">&#9823;</div>
         <div class="cell-label">b3</div>
       </td> <!-- cell b3 -->
       <td class="dark tile top-right">
-        <div class="white pawn" ng-if="game.boardState.substr(8, 1) === 'W'">&#9823;</div>
-        <div class="black pawn" ng-if="game.boardState.substr(8, 1) === 'B'">&#9823;</div>
+        <div class="white pawn" ng-if="boardState.substr(8, 1) === 'W'">&#9823;</div>
+        <div class="black pawn" ng-if="boardState.substr(8, 1) === 'B'">&#9823;</div>
         <div class="cell-label">c3</div>
       </td> <!-- cell c3 -->
 
@@ -49,18 +29,18 @@
 
     <tr> <!--(Row 2)-->
       <td class="tile middle-left">
-        <div class="white pawn" ng-if="game.boardState.substr(3, 1) === 'W'">&#9823;</div>
-        <div class="black pawn" ng-if="game.boardState.substr(3, 1) === 'B'">&#9823;</div>
+        <div class="white pawn" ng-if="boardState.substr(3, 1) === 'W'">&#9823;</div>
+        <div class="black pawn" ng-if="boardState.substr(3, 1) === 'B'">&#9823;</div>
         <div class="cell-label">a2</div>
       </td> <!-- cell a2 -->
       <td class="dark tile middle-center">
-        <div class="white pawn" ng-if="game.boardState.substr(4, 1) === 'W'">&#9823;</div>
-        <div class="black pawn" ng-if="game.boardState.substr(4, 1) === 'B'">&#9823;</div>
+        <div class="white pawn" ng-if="boardState.substr(4, 1) === 'W'">&#9823;</div>
+        <div class="black pawn" ng-if="boardState.substr(4, 1) === 'B'">&#9823;</div>
         <div class="cell-label">b2</div>
       </td> <!-- cell b2 -->
       <td class="tile middle-right">
-        <div class="white pawn" ng-if="game.boardState.substr(5, 1) === 'W'">&#9823;</div>
-        <div class="black pawn" ng-if="game.boardState.substr(5, 1) === 'B'">&#9823;</div>
+        <div class="white pawn" ng-if="boardState.substr(5, 1) === 'W'">&#9823;</div>
+        <div class="black pawn" ng-if="boardState.substr(5, 1) === 'B'">&#9823;</div>
         <div class="cell-label">c2</div>
       </td> <!-- cell c2 -->
 
@@ -68,39 +48,21 @@
 
     <tr> <!--(Row 1)-->
       <td class="dark tile bottom-left">
-        <div class="white pawn" ng-if="game.boardState.substr(0, 1) === 'W'">&#9823;</div>
-        <div class="black pawn" ng-if="game.boardState.substr(0, 1) === 'B'">&#9823;</div>
+        <div class="white pawn" ng-if="boardState.substr(0, 1) === 'W'">&#9823;</div>
+        <div class="black pawn" ng-if="boardState.substr(0, 1) === 'B'">&#9823;</div>
         <div class="cell-label">a1</div>
       </td> <!-- cell a1 -->
       <td class="tile bottom-center">
-        <div class="white pawn" ng-if="game.boardState.substr(1, 1) === 'W'">&#9823;</div>
-        <div class="black pawn" ng-if="game.boardState.substr(1, 1) === 'B'">&#9823;</div>
+        <div class="white pawn" ng-if="boardState.substr(1, 1) === 'W'">&#9823;</div>
+        <div class="black pawn" ng-if="boardState.substr(1, 1) === 'B'">&#9823;</div>
         <div class="cell-label">b1</div>
       </td> <!-- cell b1 -->
       <td class="dark tile bottom-right">
-        <div class="white pawn" ng-if="game.boardState.substr(2, 1) === 'W'">&#9823;</div>
-        <div class="black pawn" ng-if="game.boardState.substr(2, 1) === 'B'">&#9823;</div>
+        <div class="white pawn" ng-if="boardState.substr(2, 1) === 'W'">&#9823;</div>
+        <div class="black pawn" ng-if="boardState.substr(2, 1) === 'B'">&#9823;</div>
         <div class="cell-label">c1</div>
       </td> <!-- cell c1 -->
     </tr>
 
   </table>
-
 </div>
-
-<div id="moves">
-  <span  ng-if="game.players[game.currentPlayer].type === 'human'" ng-repeat="(id, m) in game.boardMoves">
-    <button class="{{'move-' + id}}" ng-click="doMove({move: m})">{{m}}</button>
-  </span>
-  <span  ng-if="game.victory == ' ' && game.players[game.currentPlayer].type === 'ai' && gameType == 'huvsai'">
-    <button class="{{'move-' + id}}" ng-click="aiMove()">{{i18n.RANDOM_MOVE}}</button>
-  </span>
-  <span id="game-over" ng-if="game.boardMoves.length === 0">
-    <button ng-click="newGame()">{{i18n.NEW_GAME}}</button>
-    <button ng-click="showBlackLogic()" ng-if="gameType !== 'huvshu'" class="black_button">{{i18n.SHOW_LOGIC}}</button>
-    <button ng-click="showWhiteLogic()" ng-if="gameType == 'aivsai'" class="white_button">{{i18n.SHOW_LOGIC}}</button>
-    <button ng-click ="returnToMainMenu()" ng-if="gameType == 'aivsai'">{{i18n.RETURN_TO_MAIN_MENU}}</button>
-  </span>
-  <button ng-click ="returnToMainMenu()" ng-if="gameType !== 'aivsai'">{{i18n.RETURN_TO_MAIN_MENU}}</button>
-</div>
-
